src/test/deca/extension/context/valid/test_acces_element_tableau.deca
// Description:
// Test la declaration de tableau 1d
// pour des  classes  
// Resultats:
//  TEST valide contextuelement
// Historique:
//    cree le 01/01/2023



{
    int[] tableauInt = new int[5];
    float[][] tableauFloat = new float[5][5];
    int x;
    tableauInt[3] = 10;
    tableauFloat[3][2] = 20;
    x = (int)(tableauFloat[3][2]) *2 ;

}
