src/test/deca/extension/context/invalid/test_type_incompatible_selection.deca
// Description:
// Test la mauvaise selection des elements d'un tableau
// Resultats:
//  TEST pas valide contextuelement
// Historique:
//    cree le 01/01/2023



{
    int[][] tableauInt = new int[2][5];
    float[][] tableauFloat = new flaot[2][5];
    int x;
    x = tableauFloat[2][3];
}
